# python-project-template

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/: config.py  db.py  llm.py
